--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
                     <a href="宣传.rar">download</a>
                 </div>
             `
+            ＂ljh2033＂:`
+                <div class="document-card">
+                    <p>恭喜你发现了彩蛋！</p>
+                </div>`
         };
 
         // 存储已解锁的内容标识（用于去重）
@@ -169,4 +173,5 @@
         }
     </script>
 </body>
+
 </html>
